<resources>
    <string name="app_name">Pheezee App</string>
    <string name="demo_name">Demo Account</string>
    <string name="facebook_app_id">2061772390522951</string>
    <string name="fb_login_protocol_scheme">fb2061772390522951</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="add_patients_text">+ <u>Add patient</u></string>
    <string name="start_clinic_session">Start Clinic Session</string>
    <string name="title_activity_scan_devices">ScanDevicesActivity</string>
    <string name="repetition">Repetitions</string>
    <string name="copy_rights">2023, Startoon Labs Pvt. Ltd.</string>
    <string name="feature_not_available">This feature is not available in current package. Please upgrade to <b>Gold</b> or <b>Gold Plus</b> to avail this feature.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_are_doing_good">You are improving day by day which is a good sign, so continue you will be recovering soon</string>
    <string name="start_bodypart_to_monitor">Done</string>
    <string-array name="bodyPartName">
        <item>Upper Extremity</item>
        <item>Shoulder</item>
        <item>Elbow</item>
        <item>Forearm</item>
        <item>Wrist</item>
        <item>Lower Extremity</item>
        <item>Hip</item>
        <item>Knee</item>
        <item>Ankle</item>
        <item>Spine</item>
        
        <item>Thoracic</item>
        <item>Lumbar</item>
        <item>Abdomen</item>
        <item>Abdomen</item>
    </string-array>
    <string-array name="bodyVideos">
        <item>Upper Extremity</item>
        <item>Shoulder</item>
        <item>Elbow</item>
        <item>Forearm</item>
        <item>Wrist</item>
        <item>Lower Extremity</item>
        <item>Hip</item>
        <item>Knee</item>
        <item>Ankle</item>
        <item>Spine</item>
        
        <item>Thoracic</item>
        <item>Lumbar</item>
        <item>Abdomen</item>
        <item>Abdomen</item>
    </string-array>
    <string-array name="setSessionGoalSpinner">
        <item>Set Reps</item>
        
        <item>10 Reps</item>
        <item>15 Reps</item>
        <item>20 Reps</item>
        <item>25 Reps</item>
    </string-array>
    <string-array name="patient_status">
        <item>Patient Status</item>
        <item>Alert</item>
        <item>Lethargic</item>
        <item>Drowsy</item>
    </string-array>
    <string name="session_type">Session Type</string>
    <string-array name="channel_link">
        <item><![CDATA[http://13.127.78.38:3000/normative]]></item>
    </string-array>
    <string-array name="case_description">
        <item>Specialities</item>
        <item>Ortho</item>
        <item>Neuro</item>
        <item>Cardio</item>
        <item>Other</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="case_00">
        <item>Condition</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        

    </string-array>
    <string-array name="kranthi">
        <item>Kranthi</item>
    </string-array>
    <string-array name="case_01">
        <item>Osteoarthritis</item>
        <item>TKR</item>
        <item>THR</item>
        <item>LBA</item>
        <item>PA Shoulder</item>
        <item>Fracture</item>
        <item>Sprain</item>

    </string-array>
    <string-array name="case_02">
        <item>GBS</item>
        <item>Spinal Cord Injury</item>
        <item>Stroke</item>
        <item>Monopolegia</item>
        <item>Paraparesis</item>
        <item>LBA</item>
        <item>Hemiparesis</item>
        <item>Quadriparesis</item>
        <item>Subdural Haematoma</item>
        <item>Cardioembolic Stroke</item>
        <item>Hemiplegia</item>
        <item>Laminectomy</item>
    </string-array>
    <string-array name="case_03">
        <item>Post CABG</item>
        <item>Metabolic disorders</item>
        <item>Hypertension</item>
    </string-array>
    <string-array name="case_04">
        <item>Menopause</item>
        <item>Post-Partum</item>
        <item>Pregnancy</item>
        <item>Ventilator Support</item>
    </string-array>
    <string-array name="check_box">
        <item>Hypertension</item>
        <item>DM</item>
        <item>Hypothyroidism</item>
        <item>Hyperthyroidism</item>
        <item>Presence of implant</item>
        <item>others</item>

    </string-array>
    <string name="overall_feedback">Overall Feedback</string>
    <string name="report_day">Day</string>
    <string name="report_week">Week</string>
    <string name="report_month">Month</string>
    <string name="report_overall">Overall</string>
    <string name="generate_report">Click to generate report</string>
    <string name="left_day">Go to previous day</string>
    <string name="right_day">Go to next day</string>
    <string name="left_week">Go to previous week</string>
    <string name="right_week">Go to next week</string>
    <string name="left_month">Go to previous month</string>
    <string name="right_month">Go to next month</string>
    <string name="left_joint">Previous Joint</string>
    <string name="right_joint">Right Joint</string>
    <string name="session_report">Session Report</string>
    <string name="monitor">Live Monitoring</string>
    <string name="body_part">Select Body Part</string>
    <string name="range_of_motion">Range Of Motion</string>
    <string name="total_repetition">Total Repetition</string>
    <string name="action_time">Action Time</string>
    <string name="idle_time">Idle Time</string>
    <string name="hold_time">Hold Time</string>
    <string name="emg">EMG</string>
    <string name="back">Back</string>
    <string name="total_time">Total Time - </string>
    <string name="new_user">New user?</string>
    <string name="have_account">Already have an account?</string>
    <string name="login"><u>Log in</u></string>
    <string name="signup"><u>Sign up</u></string>
    <string name="continue_with">Continue with</string>
    <string name="by_signing_in">By signing up you agree with our terms and privacy policy</string>
    <string name="cd_facebook_icon">Facebook Log in</string>
    <string name="cd_google_icon">Google Log in</string>
    <string name="bluetooth_cd">Bluetooth icon</string>
    <string name="raw_packet_hint">0:-EMG, 1:-LSM</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">Welcome</string>
    <string name="nav_home">Home</string>
    <string name="nav_add_device">Add device</string>
    <string name="nav_add_patient">Add Patient</string>
    <string name="nav_app_version">App Info</string>
    <string name="nav_device_info">My Pheezee</string>
    <string name="nav_log_out"><font fgcolor='#FFFF3B30'>Logout</font></string>
    <string name="nav_my_account_pannel">My Account</string>
    <string name="nav_customer">Customer Care</string>
    <string name="nav_rate">Rate Us</string>
    <string name="home_home">Home</string>
    <string name="timer_start">Start</string>
    <string name="create_account_header">Sign Up</string>
    <string name="signup_name">Name</string>
    <string name="signup_password">Password</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_package_id">Package Id</string>
    <string name="signup_cancel">Cancel</string>
    <string name="signup_create">Create</string>
    <string name="cd_patient">Patient icon</string>
    <string name="cd_phiziotherapist">Phiziotherapist Icon</string>
    <string name="device_info">My Pheezee</string>
    <string name="physio_profile">My Profile</string>
    <string name="device_name">Device Name:</string>
    <string name="device_mac">Device Mac:</string>
    <string name="firmware_version">Firmware Version:</string>
    <string name="device_serial_id">Device Serial ID:</string>
    <string name="device_harmware_version">Hardware Version:</string>
    <string name="device_battery">Battery:</string>
    <string name="device_connection_state">Connection Status:</string>
    <string name="device_null">Null</string>
    <string name="update_firmware">Update available</string>
    <string name="reactivate_device">Reactivate Device</string>
    <string name="calibrate_device">Calibrate</string>
    <string name="firmware_updated">Firmware has been updated, reconnecting device please wait.</string>
    <string name="device_not_connected">N/C</string>
    <string name="bluetooth_disabled">Bluetooth Diabled</string>
    <string name="dfu_bluetooth_disabled">The device firmware has been aborted as bluetooth is turned of, please turn on and try again later.</string>
    <string name="dfu_switching_to_dfu">Starting device update..</string>
    <string name="starting_bootloader">Starting device bootloader..</string>
    <string name="dfu_device_connected">Device Connected</string>
    <string name="dfu_started">Dfu uploading started</string>
    <string name="dfu_device_disconnected">Dfu device disconnected</string>
    <string name="dfu_status_connecting_to_device">Connecting to device…</string>
    <string name="dfu_successfull">The device firmware have been updated successfully to</string>
    <string name="instructions_dfu">Please ensure the following steps during Pheezee update: </string>
    <string name="instructions2_dfu"> \u2022 The phone is near the Pheezee.\n \u2022 The device must be turned ON.\n \u2022 The mobile bluetooth is ON.\n</string>
    <string name="app_info">App Info</string>
    <string name="app_version">Application Version</string>
    <string name="application_version">3.0.24</string>
    <string name="user_manual_version">User Manual</string>
    <string name="Paragraph">In the computer world, a bug is an error in a software program. <H>It</H>may cause a program to unexpectedly quit or behave in an unintended manner. For example, a small bug may cause a button within a programs interface not to respond when you click it \n Most bugs occur due to the mistakes and errors made by the developers while constructing the source code. It can be within the components and operating system which is used by the program. Some bugs are also the result of errors in translation between different languages by compilers which produce the incorrect code.
    </string>
    <string name="DMHypertension">DM<br></br>Hypertension</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="Term_conditions">Terms and conditions</string>
    <string name="warrenty">Warranty</string>
    <string name="your_profile">My Profile</string>
    <string name="change_profile_pic">Update profile pic</string>
    <string name="change_clinic"><u>Upload clinic logo</u></string>
    <string name="edit">Edit Details</string>
    <string name="name">Name:&#032;</string>
    <string name="email">Email: </string>
    <string name="phone">Phone:</string>
    <string name="cancel">Cancel</string>
    <string name="set_reference">Set Target</string>
    <string name="stand">Stand</string>
    <string name="sit">Sit</string>
    <string name="Lying">Lying</string>
    <string name="body_orientation">Body Orientation</string>
    <string name="muscle_name">Muscle Name?*</string>
    <string name="continue_session">Continue</string>
    <string name="logo_of_pheezee">Logo of pheezee</string>
    <string name="copy_rights_image">copy rights image</string>
</resources>