<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/user_profile"
            android:title="@string/nav_my_account_pannel"/>
        <item
            android:id="@+id/pheeze_device_info"
            android:icon="@drawable/test_my_device_3"
            android:title="@string/nav_device_info"/>


        <item android:id="@+id/nav_rate"
            android:title="@string/nav_rate"
            android:icon="@drawable/rts"/>

        <item android:id="@+id/nav_customer"
            android:title="@string/nav_customer"
            android:icon="@drawable/cst"/>

        <item

            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out_png_3"
            android:title="@string/nav_log_out" />

    </group>




</menu>
