<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/popup_comment_tv_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/muscle_name"
        style="@style/pheezee_normal"
        android:fontFamily="@font/pheezee_font"
        android:textColor="@color/black"
        android:textSize="@dimen/Heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/comment_btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/continue_session"
        android:textSize="@dimen/btn_text"
        style="@style/pheezee_normal"
        android:fontFamily="@font/pheezee_font"
        android:textColor="@color/pheezee_text_blue_for_icon_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/comment_btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_btn_setreference" />


    <Button
        android:id="@+id/comment_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/pheezee_text_blue_for_icon_text_background"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/comment_btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/comment_btn_setreference" />

    <Button
        android:id="@+id/comment_btn_setreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_reference"
        android:textSize="@dimen/btn_text"
        style="@style/pheezee_normal"
        android:fontFamily="@font/pheezee_font"
        android:textColor="@color/pheezee_text_blue_for_icon_text_background"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Spinner
        android:id="@+id/sp_exercise_name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/spinner_background"
        android:backgroundTint="@color/pheezee_text_blue_for_icon_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toBottomOf="@+id/popup_comment_tv_exercise_name" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:text="@string/body_orientation"

        android:fontFamily="@font/pheezee_font"
        style="@style/pheezee_normal"
        android:textColor="@color/black"
        android:textSize="@dimen/Heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_exercise_name" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:id="@+id/rg_body_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/rb_sit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/pheezee_font"
                style="@style/pheezee_normal"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/sit" />

            <RadioButton
                android:id="@+id/rb_stand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pheezee_font"
                style="@style/pheezee_normal"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/stand" />

            <RadioButton
                android:id="@+id/rb_supine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/pheezee_font"
                style="@style/pheezee_normal"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"
                android:text="@string/Lying" />
        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>