<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_opaque"
    tools:context="com.start.apps.pheezee.activities.OnBoardingActivity">

    <ImageView
        android:id="@+id/pheezee_startup_logo"
        android:layout_width="200sp"
        android:layout_height="270sp"
        android:src="@drawable/pheezee_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_of_pheezee"
        app:layout_constraintVertical_bias="0.49" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/textView24"
            app:srcCompat="@drawable/ic_copyright"
            android:contentDescription="@string/copy_rights_image" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_rights"
            android:textColor="@color/good_green"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            tools:layout_editor_absoluteY="700dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>