<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_bodypart"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        app:elevation="@dimen/toolbar_dim_5"
        android:elevation="@dimen/toolbar_dim_5"
        android:background="@color/white_opaque"
        tools:ignore="ObsoleteLayoutParam">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:id="@+id/iv_back_app_info"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:src="@drawable/green_back_arrow"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_info"
                android:gravity="center|left"
                android:textSize="20sp"
                android:textColor="@color/good_green"
                android:layout_gravity="center"
                android:paddingStart="20dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/progress_gray_trans">


        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center|left"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/ebrima"
                        android:text="@string/app_version"
                        android:textColor="@color/good_green"
                        android:textSize="@dimen/app_version_dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_deviceinfo_device_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center|right"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/ebrima"
                        android:text="@string/application_version"
                        android:textColor="@color/good_green"
                        android:textSize="@dimen/app_version_dp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_gray_trans">


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>